# ChangeLog for net-print/xfprint
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2008; Christoph Mende <angelos@gentoo.org> xfprint-9999.ebuild:
  Fixed make check

  05 Dec 2008; Christoph Mende <angelos@gentoo.org> xfprint-4.5.92.ebuild,
  xfprint-9999.ebuild:
  Removed unused icon that would collide with vmware-workstation

*xfprint-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org> +xfprint-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> xfprint-9999.ebuild:
  Use SLOT dependencies for glib/gtk+

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> xfprint-9999.ebuild:
  Migrated from mcs to xfconf

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
