@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfprint-4.5.92.tar.bz2 848627 RMD160 b406d69eff71369ecf3bf88a907906c2e50357e1 SHA1 e0b30252a7d210eaa09c6044d3943d06ede0214e SHA256 4013fd40f948abae0b547be31bc0d73fd7df5619be2483afb1bd3cca9264790a
-EBUILD xfprint-4.5.92.ebuild 875 RMD160 6bae4a7bc82472abd07e1f10e5cb798905e11047 SHA1 09e0a0e97e0f8bdbd83f0c53f434954ae538a14c SHA256 22b654310e1eb2aa1d2a2b4f5fcb99089c86d2a4ae9a5cfb78df46be08a56871
-EBUILD xfprint-9999.ebuild 939 RMD160 725690334c388d0c3b08b6151e327c8c8490bda6 SHA1 e7573170ac4dd10049ad1f3eb0342d51c1167c79 SHA256 f848afe44bc4923f01ac8c540dfd9e4c69826aef898a9fda17f5712bb11cf5b9
-MISC ChangeLog 806 RMD160 3f3397b4ef1d372f6c7e77c26a84c0241f09f430 SHA1 ccc9fe4b5c9fa82eff7a976a8791d5333d2d77d2 SHA256 d0ca6216b4786eb8db83a7ff32c647a14a8d648512515a4c80db12784fb07551
+EBUILD xfprint-4.5.92.ebuild 949 RMD160 5e5d3276754ec46231773db62e5ce0eb8be227a2 SHA1 a101b5a9804bf4a1d2d0889183b53ea955e8d5ee SHA256 98fa03ab16c3f1c6874f1e0052903fb30a255e8cac7b04ce18e9ee179ad210d6
+EBUILD xfprint-9999.ebuild 1035 RMD160 a54b4f8f4a119aa5fecf66e109c0fe09a6dd0a02 SHA1 59011d67c5c9ccaf75d44b3bc2132ff0157ff010 SHA256 f77e9023e7aa94a00e8ba73ccc3919ccb9f87a864027ee9ed50c1f84ac16b184
+MISC ChangeLog 921 RMD160 e02b0c2b5208dfc5bcd84a634fce4d082349284e SHA1 47571649445ac8e4668927def3fb4e913b73d6e6 SHA256 e54db9450d4d0568b5b3edcb479434a0af6550b9ceaa12e44849c3770e47aba4
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk+j0MACgkQKhnDs22gwa91sgCg1q66qLB35QBUiSXZgAep0f0r
-BqIAnjGLZ9prZZbXFy+RX4QvJz6Rr5qF
-=vgYa
+iEYEARECAAYFAklK3DsACgkQKhnDs22gwa+BuACgw+qp9nzxBhSFcEzNsFdwNoBm
+Gc0An12MtN/s8aTnsRDgodD69v3rbOf6
+=PL+L
 -----END PGP SIGNATURE-----
