@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Dec 2008; Christoph Mende <angelos@gentoo.org> xfprint-4.5.92.ebuild,
+  xfprint-9999.ebuild:
+  Added USE=doc
+
   09 Dec 2008; Christoph Mende <angelos@gentoo.org> xfprint-9999.ebuild:
   Fixed make check
 
